fixed broken modal close btn on mobile

--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -27,7 +27,7 @@
 }
 
 #darkness {
-    z-index: 1;
+    z-index: 3;
     position: fixed;
     left: 0;
     top: 0;
